--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -40,7 +40,7 @@
           </article>
         </div>
       </div>
-      <div class="col-sm-12 col-md-12 col-lg-3">
+      <!-- <div class="col-sm-12 col-md-12 col-lg-3">
         <div class="sticky-sidebar">
           {{ if .Params.toc | default true}}
           <aside class="toc">
@@ -89,7 +89,7 @@
           </aside>
           {{ end }}
         </div>
-      </div>
+      </div> -->
     </div>
     <div class="row">
       <div class="col-sm-12 col-md-12 col-lg-9 p-4">
